--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "0.18.1",
     "countup.js": "^2.0.4",
     "element-ui": "2.7.2",
+    "file-saver": "^1.3.3",
     "js-cookie": "2.2.0",
     "lodash": "^4.17.15",
     "normalize.css": "7.0.0",
@@ -26,7 +27,8 @@
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "xlsx": "^0.15.3"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
@@ -50,7 +52,7 @@
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
-    "script-loader": "0.7.2",
+    "script-loader": "^0.7.2",
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
