--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-jest": "23.6.0",
     "chalk": "2.4.2",
     "connect": "3.6.6",
+    "css-loader": "^3.2.1",
     "eslint": "5.15.3",
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
@@ -56,6 +57,9 @@
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^15.7.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "2.6.10"
   },
   "engines": {
