--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "rough-viz": "^1.0.5",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
+    "vue-roughviz": "^0.1.2",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "xlsx": "^0.15.3"
