--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "countup.js": "^2.0.4",
-    "element-ui": "2.7.2",
+    "element-ui": "^2.13.0",
     "file-saver": "^1.3.3",
     "js-cookie": "2.2.0",
     "lodash": "^4.17.15",
